feat: add log sanitization to protect sensitive information in console output